--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta
       name="description"
@@ -9,14 +8,14 @@
       href="https://fonts.googleapis.com/css2?family=Nunito+Sans&family=Poppins:wght@600&family=Roboto:wght@300&family=Ubuntu:ital,wght@1,300&display=swap"
       rel="stylesheet"
     />
-    <title>Portfolio | Bharat Sharma</title>
     <style>
       * {
         font-family: "Nunito Sans", "Poppins", "Roboto", "Ubuntu", sans-serif;
         margin: 0;
-        padding: 0;
+        overflow-x: hidden;
       }
     </style>
+    <title>Portfolio | Bharat Sharma</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
