--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
       content="Web site created using create-react-app"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Nunito+Sans&family=Poppins:wght@600&family=Roboto:wght@300&family=Ubuntu:ital,wght@1,300&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Nunito+Sans&family=Poppins:wght@100;700&family=Roboto:wght@200;600&family=Ubuntu:ital,wght@1,300;400;500&display=swap"
       rel="stylesheet"
     />
     <style>
