--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,11 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans&family=Poppins:wght@600&family=Roboto:wght@300&family=Ubuntu:ital,wght@1,300&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito+Sans&family=Poppins:wght@600&family=Roboto:wght@300&family=Ubuntu:ital,wght@1,300&display=swap"
+      rel="stylesheet"
+    />
+    <title>Portfolio | Bharat Sharma</title>
     <style>
       * {
         font-family: "Nunito Sans", "Poppins", "Roboto", "Ubuntu", sans-serif;
@@ -15,10 +19,10 @@
         overflow-x: hidden;
       }
     </style>
-    <title>Portfolio | Bharat Sharma</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+
     <div id="root"></div>
   </body>
 </html>
