--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link
       href="https://fonts.googleapis.com/css2?family=Nunito+Sans&family=Poppins:wght@600&family=Roboto:wght@300&family=Ubuntu:ital,wght@1,300&display=swap"
       rel="stylesheet"
