--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="This is my Bharat Sharma's Portfolio"
+    />
+    <meta
+      name="google-site-verification"
+      content="Ng5nW4KMQiJ0Sdjao87xkB47g8w0EqU21ySqmQDCAGw"
     />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link
